<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <item
        android:id="@+id/one_Mexican"
        android:title="@string/rest_Mex1">
        <menu>
            <item
                android:id="@+id/one_Mexican_Food1"
                android:title="@string/mex1_Food1"
                android:orderInCategory="1"/>
            <item
                android:id="@+id/one_Mexican_Food2"
                android:title="@string/mex1_Food2"
                android:orderInCategory="2"/>
            <item
                android:id="@+id/one_Mexican_Food3"
                android:title="@string/mex1_Food3"
                android:orderInCategory="3"/>
        </menu>
    </item>

    <item
        android:id="@+id/two_Mexican"
        android:title="@string/rest_Mex2">
        <menu>
            <item
                android:id="@+id/two_Mexican_Food1"
                android:title="@string/mex2_Food1"
                android:orderInCategory="1"/>
            <item
                android:id="@+id/two_Mexican_Food2"
                android:title="@string/mex2_Food2"
                android:orderInCategory="2"/>
            <item
                android:id="@+id/two_Mexican_Food3"
                android:title="@string/mex2_Food3"
                android:orderInCategory="3"/>
        </menu>
    </item>

    <item
        android:id="@+id/three_Mexican"
        android:title="@string/rest_Mex3">
        <menu>
            <item
                android:id="@+id/three_Mexican_Food1"
                android:title="@string/mex3_Food1"
                android:orderInCategory="1"/>
            <item
                android:id="@+id/three_Mexican_Food2"
                android:title="@string/mex3_Food2"
                android:orderInCategory="2"/>
            <item
                android:id="@+id/three_Mexican_Food3"
                android:title="@string/mex3_Food3"
                android:orderInCategory="3"/>
        </menu>
    </item>
</menu>