<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.jasonpearson_comp304lab2_ex1.DisplayCuisineActivity">

    <TextView
        android:id="@+id/messageCuisine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="12pt"
        android:text="@string/cuisineText" />

    <RadioGroup
        android:id="@+id/cuisineRG"
        android:layout_below="@id/messageCuisine"
        android:translationY="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/cuisineRB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuisine1"
            android:textSize="12pt"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:id="@+id/cuisineRB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuisine2"
            android:textSize="12pt"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:id="@+id/cuisineRB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuisine3"
            android:textSize="12pt"
            android:onClick="onRadioButtonClicked"
            />
    </RadioGroup>

    <Button
        android:visibility="invisible"
        android:clickable="false"
        android:id="@+id/SELECT"
        android:translationY="25dp"
        android:layout_below="@id/cuisineRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popupButton"
        android:onClick="Restaurants"/>
    <Button
        android:visibility="invisible"
        android:clickable="false"
        android:id="@+id/NEXT"
        android:translationY="25dp"
        android:translationX="100dp"
        android:layout_alignBottom="@id/SELECT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerButton"
        android:onClick="Customer"/>
</RelativeLayout>
