<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.jasonpearson_comp304lab2_ex1.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="12pt"
        android:text="@string/welcomeText" />
    <ImageView
        android:layout_below="@id/message"
        android:id="@+id/logo"
        android:contentDescription="@string/icon_info"
        android:layout_centerHorizontal="true"
        android:layout_width="200pt"
        android:layout_height="200pt"
        android:src="@mipmap/logo"
        />
    <Button
        android:layout_below="@id/logo"
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/enterButton"
        android:onClick="Cuisines"/> <!--@string/button_send - same instance of String variable reference - for Strings.xml
        , onClick="sendMessage" - event handler for Send Button - on clicking the button make method call (sendMessage() method) from MainActivity.java
        , this method in Main Activity starts a new Activity, which carries over the message to another View (TextView) in this second Activity
        -->

</RelativeLayout>
